# SoundCloud-Desktop

./: .gitignore  LICENSE  README-EN.md  README-RU.md  README-TS.md  README.md  README_RU.md  biome.json  build.ts  config.js  config.json5  config.proxy.js  config.proxy.json5  eslint.config.js  forge.config.js  init.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  soundcloud.js  summary.txt  tsconfig.json  update_info.json
.build/: build.js
.build/native_utils/: Cargo.toml  index.d.ts  package.json
.build/native_utils/src/: efficiency.rs  lib.rs  protocol.rs  sleeper.rs
.build/native_utils/src/win/: efficiency.rs  protocol.rs  sleeper.rs
CSPBypass/: CSPBypass.js  hook.js  preload.js  webview.js  win.html
_proxy/: README.md  cloudflare-proxy.js  deno-proxy.js  docker-compose-tor.yml  docker-compose.yml  node-intermediate-proxy.js  node-proxy.js  squid.conf  wg0.conf
docs/: .firebaserc  CNAME  index.html
flatpak/: README.md  com.github.zxcnoname666.SoundCloudDesktop.desktop  com.github.zxcnoname666.SoundCloudDesktop.json  com.github.zxcnoname666.SoundCloudDesktop.metainfo.xml  generate-sources.sh  generated-sources.json  soundcloud-wrapper.sh
fonts/: NeonOL.eot
frontend/: loader.html  main.html  preload-wv.js  preload.js  settings.html  update-notification.html
icons/: appLogo.icns
langs/: ru.js  ru_electron.js
modules/: AutoUpdater.js  Extensions.js  ProtocolInjector.js  ProxyManager.js  Server.js  Setuper.js  TCPPortUsing.js  Tray.js  Version.js  startupMenu.js  win-setup.js
native_utils/: Cargo.toml  index.d.ts  (+1 more)
(+77 files in other folders)
