[package]
name = "native_utils"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Power",
] }
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
opt-level = "s"
debug = false
panic = "abort"
strip = "symbols"
codegen-units = 1